# ENERLYTICS

./: .env.example  Dockerfile  README.md  config.toml  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
src/energy_explore/: __init__.py  advisor.py  app.py  cli.py  config.py  core.py  financial.py  perez.py  pipeline.py  report.py  sizer.py  storage.py  validation.py
tests/: test_advisor.py  test_core.py  test_financial.py  test_perez.py
